--- a/ENIGMAsystem/SHELL/Widget_Systems/TinyFileDialogs/Makefile
+++ b/ENIGMAsystem/SHELL/Widget_Systems/TinyFileDialogs/Makefile
@@ -1,1 +1,3 @@
+SHARED_SRC_DIR := ../../../../shared
+include $(SHARED_SRC_DIR)/Makefile
 SOURCES += $(wildcard Widget_Systems/TinyFileDialogs/*.cpp)
