--- a/shared/tinyfiledialogs/Makefile
+++ b/shared/tinyfiledialogs/Makefile
@@ -1,1 +1,2 @@
+include ../../../../shared/TFD/Makefile
 SHARED_SOURCES := $(SHARED_SOURCES) $(addprefix tinyfiledialogs/,$(call relative_wildcard,*.cpp))
