--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL2/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL2/Makefile
@@ -1,8 +1,5 @@
 include Graphics_Systems/OpenGL/Makefile
+include Graphics_Systems/OpenGL2-OpenGLES2/Makefile
 SOURCES += $(wildcard Graphics_Systems/OpenGL2/*.cpp)
 
-SHADER_VERSION := Graphics_Systems/OpenGL2/shaders/version.glsl
-VERTEX_SHADER_PREFIX := Graphics_Systems/OpenGL2/vertex_shader_prefix.glsl
-VERTEX_SHADER := Graphics_Systems/OpenGL2/vertex_shader.glsl
-FRAGMENT_SHADER_PREFIX := Graphics_Systems/OpenGL2/fragment_shader_prefix.glsl
-FRAGMENT_SHADER := Graphics_Systems/OpenGL2/fragment_shader.glsl
+SHADER_VERSION := Graphics_Systems/OpenGL2/version.glsl
