--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES/Makefile
@@ -1,5 +1,5 @@
 override CXXFLAGS += -IGraphics_Systems/OpenGLES/ -IBridges/SDL-OpenGLES
-SOURCES += $(wildcard Graphics_Systems/OpenGLES/*.cpp) $(wildcard Graphics_Systems/General/*.cpp)
+SOURCES += $(wildcard Graphics_Systems/OpenGLES/*.cpp) $(wildcard Graphics_Systems/OpenGL/*.cpp) $(wildcard Graphics_Systems/General/*.cpp)
 
 ifeq ($(TARGET-PLATFORM), Windows)
 	override LDLIBS += -lopengl32 -lglu32
