gotta link boost filesystem in dat fallback

--- a/CommandLine/libEGM/Makefile
+++ b/CommandLine/libEGM/Makefile
@@ -18,8 +18,16 @@ OBJ_DIR   := .eobjs
 #if gcc >= 8 use std::filesystem instead of boost
 ifeq ($(shell expr $(GCCVER) \>= 8), 1)
 	override CXXFLAGS += -std=c++17
+	FS_LIBS=-lstdc++fs
 else
 	override CXXFLAGS += -std=c++14 -DUSE_BOOST_FS
+	ifeq ($(OS), Linux)
+		FS_LIBS=-lboost_filesystem
+	else ifeq ($(OS), Darwin)
+		FS_LIBS=-lboost_filesystem
+	else
+		FS_LIBS=-lboost_filesystem-mt
+	endif
 endif
 
 rwildcard=$(wildcard $1/$2) $(foreach d,$(wildcard $1/*),$(call rwildcard,$d,$2))
@@ -42,7 +50,7 @@ clean:
 # --libs-only-L is specified because the Trusty Tahr package for pugixml does not have a proper pkg-config
 # hence we only use pkg-config for the lib dirs and just always link pugixml whether in travis, on ubuntu, or in msys2
 $(LIBRARY): $(OBJECTS)
-	$(CXX) -shared -o $@ $^ -lz $(shell pkg-config --libs-only-L pugixml) -lpugixml -lyaml-cpp -L../../ -lProtocols -lprotobuf -lstdc++fs -L$(SHARED_SOURCES)/lodepng -llodepng
+	$(CXX) -shared -o $@ $^ $(FS_LIBS) -lz $(shell pkg-config --libs-only-L pugixml) -lpugixml -lyaml-cpp -L../../ -lProtocols -lprotobuf -lstdc++fs -L$(SHARED_SOURCES)/lodepng -llodepng
 
 # Create the object directories
 $(OBJDIRS):
