clean & use multiple cores

--- a/.travis.yml
+++ b/.travis.yml
@@ -193,7 +193,7 @@ script:
   - |
     if [ "$TEST_HARNESS" == true ]; then
       export ASAN_OPTIONS=detect_leaks=0;
-      ./ci-regression.sh "/tmp/enigma-master"
+      ./ci-regression.sh "/tmp/enigma-master" 2
     else
       ./ci-build.sh
     fi
