--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,17 +47,17 @@ environment:
 install:
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\local\bin;c:\msys64\usr\bin;%PATH%
   - ps: . C:/msys64/mingw64.exe
-  - >
-    pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-glm mingw-w64-x86_64-openal mingw-w64-x86_64-dumb
-    mingw-w64-x86_64-libvorbis mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123
-    mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2
-    mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet mingw-w64-x86_64-glew mingw-w64-x86_64-protobuf mingw-w64-x86_64-grpc
-    mingw-w64-x86_64-pugixml mingw-w64-x86_64-rapidjson mingw-w64-x86_64-yaml-cpp mingw-w64-x86_64-SDL2
+  - ps: |
+      pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-glm mingw-w64-x86_64-openal mingw-w64-x86_64-dumb
+      mingw-w64-x86_64-libvorbis mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123
+      mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2
+      mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet mingw-w64-x86_64-glew mingw-w64-x86_64-protobuf mingw-w64-x86_64-grpc
+      mingw-w64-x86_64-pugixml mingw-w64-x86_64-rapidjson mingw-w64-x86_64-yaml-cpp mingw-w64-x86_64-SDL2
   - gcc -v
-  - pwsh: |
+  - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
         # use our first job to build JDI and the CLI
-        C:/msys64/usr/bin/bash.exe -lc "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4; CLI_ENABLE_EGM=FALSE make -j 4 emake"
+        bash -lc "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4; CLI_ENABLE_EGM=FALSE make -j 4 emake"
 
         # create a daemon PowerShell "job" (not the same as an AppVeyor build job) to zip and upload
         # the blobs artifact while we start building the engine
@@ -82,4 +82,4 @@ install:
       }
 build_script:
   # AppVeyor overrides %PLATFORM% because it's part of its API, so export it
-  - pwsh: C:/msys64/usr/bin/bash.exe -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
+  - bash -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
