--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,7 +48,7 @@ install:
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\local\bin;c:\msys64\usr\bin;%PATH%
   - ps: . C:/msys64/mingw64.exe
   #- call C:/msys64/mingw64.exe
-  - C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "exit"
+  - C:\msys64\msys2_shell.cmd -defterm -mingw64 -here -lc "exit"
   - C:/msys64/usr/bin/bash.exe -lc ""
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-glm mingw-w64-x86_64-openal mingw-w64-x86_64-dumb
