--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,10 +46,10 @@ environment:
   #END WINDOWS
 install:
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\local\bin;c:\msys64\usr\bin;%PATH%
-  - ps: . C:/msys64/mingw64.exe
+  - ps: C:/msys64/mingw64.exe -lc "exit"
   #- call C:/msys64/mingw64.exe
   - C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
-  - C:/msys64/usr/bin/bash.exe -lc ""
+  - C:/msys64/mingw64.exe -lc "exit"
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-glm mingw-w64-x86_64-openal mingw-w64-x86_64-dumb
     mingw-w64-x86_64-libvorbis mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123
