--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,7 +49,18 @@ install:
   - ps: C:/msys64/mingw64.exe -lc "exit"
   - ps: C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
   - ps: C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
-  #- call C:/msys64/mingw64.exe
+  - ps: . C:/msys64/mingw64.exe -lc "exit"
+  - ps: . C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
+  - ps: . C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
+  - call C:/msys64/mingw64.exe -lc "exit"
+  - call C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
+  - call C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
+  - start /B C:/msys64/mingw64.exe -lc "exit"
+  - start /B C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
+  - start /B C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
+  - cmd /K C:/msys64/mingw64.exe -lc "exit"
+  - cmd /K C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
+  - cmd /K C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
   - C:/msys64/mingw64.exe -lc "exit"
   - C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
   - C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
