--- a/appveyor.yml
+++ b/appveyor.yml
@@ -64,6 +64,7 @@ install:
   - C:/msys64/mingw64.exe -lc "exit"
   - C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
   - C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
+  - #ding
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-glm mingw-w64-x86_64-openal mingw-w64-x86_64-dumb
     mingw-w64-x86_64-libvorbis mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123
