--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,8 +59,8 @@ install:
   #- start /B C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
   #- start /B C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
   - cmd /K C:/msys64/mingw64.exe -lc "exit"
-  - cmd /K C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
-  - cmd /K C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
+  #- cmd /K C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
+  #- cmd /K C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
   - C:/msys64/mingw64.exe -lc "exit"
   - C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
   - C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
