--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,24 +46,7 @@ environment:
   #END WINDOWS
 install:
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\local\bin;c:\msys64\usr\bin;%PATH%
-  - ps: C:/msys64/mingw64.exe -lc "exit"
-  - ps: C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
-  - ps: C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
   - ps: . C:/msys64/mingw64.exe -lc "exit"
-  - ps: . C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
-  - ps: . C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
-  - call C:/msys64/mingw64.exe -lc "exit"
-  - call C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
-  - call C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
-  - start /B C:/msys64/mingw64.exe -lc "exit"
-  #- start /B C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
-  #- start /B C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
-  #- cmd /K C:/msys64/mingw64.exe -lc "exit"
-  #- cmd /K C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
-  #- cmd /K C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
-  - C:/msys64/mingw64.exe -lc "exit"
-  - C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
-  - C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-glm mingw-w64-x86_64-openal mingw-w64-x86_64-dumb
     mingw-w64-x86_64-libvorbis mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123
@@ -74,7 +57,7 @@ install:
   - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
         # use our first job to build JDI and the CLI
-        . C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4; CLI_ENABLE_EGM=FALSE make -j 4 emake"
+        . C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -lc "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4; CLI_ENABLE_EGM=FALSE make -j 4 emake"
 
         # create a daemon PowerShell "job" (not the same as an AppVeyor build job) to zip and upload
         # the blobs artifact while we start building the engine
@@ -99,4 +82,4 @@ install:
       }
 build_script:
   # AppVeyor overrides %PLATFORM% because it's part of its API, so export it
-  - call C:\msys64\msys2_shell.cmd -mingw64 -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
+  - call C:\msys64\msys2_shell.cmd -defterm -mingw64 -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
